[gd_scene load_steps=3 format=3 uid="uid://cb1c77crf2lod"]

[ext_resource type="Script" path="res://Code/BattleUI/CardLayouts/SelectLayout.gd" id="1_10y27"]
[ext_resource type="Script" path="res://Code/BattleUI/Message/MessageChooseCard.gd" id="1_slfhl"]

[node name="MessageChooseCard" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_slfhl")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.623529)
layout_mode = 0
offset_left = -805.0
offset_top = -407.0
offset_right = 831.0
offset_bottom = 424.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -537.0
offset_top = -168.0
offset_right = 539.0
offset_bottom = -100.0
theme_override_font_sizes/font_size = 41
text = "Message"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SelectLayout" type="Node2D" parent="."]
position = Vector2(1, 7)
script = ExtResource("1_10y27")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = 115.0
offset_right = 99.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "Confirm"
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
